fix: filters overflow

--- a/src/styles/components/_filters.scss
+++ b/src/styles/components/_filters.scss
@@ -1,5 +1,6 @@
 .filters {
   text-align: left;
+  overflow: auto;
 
   span {
     cursor: pointer;
